--- a/en/apps.html
+++ b/en/apps.html
@@ -127,9 +127,9 @@
                   <img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
               </div>
               <div class="list_lang-tablet">
-                  <a class="lang_list-link active" href="#"> English</a>
-                  <a class="lang_list-link" href="../ru/apps.html">Russian</a>
-                  <a class="lang_list-link" href="">Ceština</a>
+                <a class="lang_list-link active" href="#"> English</a>
+                <a class="lang_list-link" href="../ru/index.html">Russian</a>
+                <a class="lang_list-link" href="../cs/index.html">Ceština</a>
               </div>
 
           </li>
