--- a/en/downloads.html
+++ b/en/downloads.html
@@ -126,7 +126,7 @@
           <div class="list_lang-tablet">
             <a class="lang_list-link active" href="#"> English</a>
             <a class="lang_list-link" href="../ru/downloads.html">Russian</a>
-            <a class="lang_list-link" href="">Ceština</a>
+            <a class="lang_list-link" href="../cs/downloads.html">Ceština</a>
           </div>
 
         </li>
