--- a/en/team.html
+++ b/en/team.html
@@ -125,7 +125,7 @@
                      <div class="list_lang-tablet">
                          <a class="lang_list-link active" href="#"> English</a>
                          <a class="lang_list-link" href="../ru/team.html">Russian</a>
-                         <a class="lang_list-link" href="">Ceština</a>
+                         <a class="lang_list-link" href="../cs/team.html">Ceština</a>
                      </div>
 
                  </li>
