--- a/ru/index.html
+++ b/ru/index.html
@@ -125,7 +125,7 @@
 							<div class="list_lang-tablet">
 								<a class="lang_list-link active" href=""> Русский</a>
 								<a class="lang_list-link" href="../index.html">Английский</a>
-								<a class="lang_list-link" href="">Чешский</a>
+								<a class="lang_list-link" href="../cs/index.html">Чешский</a>
 							</div>
 
 						</li>
