--- a/en/investment.html
+++ b/en/investment.html
@@ -125,7 +125,7 @@
           <div class="list_lang-tablet">
             <a class="lang_list-link active" href="#"> English</a>
             <a class="lang_list-link" href="../ru/investment.html">Russian</a>
-            <a class="lang_list-link" href="">Ceština</a>
+            <a class="lang_list-link" href="../cs/investment.html">Ceština</a>
           </div>
 
         </li>
