--- a/en/news.html
+++ b/en/news.html
@@ -126,7 +126,7 @@
           <div class="list_lang-tablet">
             <a class="lang_list-link active" href="#"> English</a>
             <a class="lang_list-link" href="../ru/news.html">Russian</a>
-            <a class="lang_list-link" href="">Ceština</a>
+            <a class="lang_list-link" href="../cs/news.html">Ceština</a>
           </div>
 
         </li>
@@ -168,8 +168,8 @@
               <img src="../assets/img/new/scrin.png" class="apps__lead-image">
             </div>
             <div class="lead__text-container apps__lead-text-container">
-              <h3 class="lead__text">Update<br>05.12.2022</h3>
-              <p class="lead__text">06.12.2022 by DIANA AKHMETOVA</p>
+              <h3 class="lead__text">Inovace<br>05.12.2022</h3>
+              <p class="lead__text">06.12.2022 DIANA ACHMETOVÁ</p>
               <p class="lead__text">Recently, SFERA has been able to make video calls and we are grateful to all users who are actively testing the functionality. Every day we receive messages from users with comments and suggestions, which we treat very carefully.</p>
               <details>
                 <summary>read more</summary>
@@ -235,35 +235,37 @@
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
         <div class="footer__contacts">
-          <h2 class="footer__title">Contacts</h2>
+          <h2 class="footer__title">Kontakty</h2>
           <ul class="contacts-list">
-            <li class="contacts-list__item">For jobs:<a class="link link_theme_dark contacts-list__link" href="mailto:info@sfera.zone">info@sfera.zone</a></li>
-            <li class="contacts-list__item">For investors: <a class="link link_theme_dark contacts-list__link" href="invest@sfera.zone">invest@sfera.zone</a></li>
-            <li class="contacts-list__item">WhatsApp of the founder: <a class="link link_theme_dark contacts-list__link nowrap" href="https://api.whatsapp.com/send/?phone=420774715626">+420 774715626</a></li>
+            <li class="contacts-list__item">Pro obecné otázky: <a class="link link_theme_dark contacts-list__link" href="mailto:info@sfera.zone">info@sfera.zone</a></li>
+            <li class="contacts-list__item">Pro investory: <a class="link link_theme_dark contacts-list__link" href="invest@sfera.zone">invest@sfera.zone</a></li>
+            <li class="contacts-list__item">Pro pracovní dotazy: <a class="link link_theme_dark contacts-list__link" href="rabota@sfera.zone">rabota@sfera.zone</a></li>
+            <li class="contacts-list__item" >WhatsApp zakladatele: <a class="link link_theme_dark contacts-list__link nowrap" href="https://api.whatsapp.com/send/?phone=420774715626">+420 776 419 030</a></li>
           </ul>
         </div>
         <div class="footer__download-links">
-          <h2 class="footer__title color_grey">We will not change the world.<br>We'll rewrite the code.</h2>
+          <h2 class="footer__title color_grey">My nebudem měnit svět,<br> My přepíšeme kod.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Download on Android </a></li>
-            <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Download on iOS</a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Stáhnout na Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Stáhnout na IOS</a></li>
           </ul>
         </div>
         <div class="footer__social-links">
           <ul class="socials-list">
-            <li class="socials-list__item"><a class="socials-list_type_youtube" href="#" title="Our YouTube channel">YouTube</a></li>
-            <li class="socials-list__item"><a class="socials-list_type_tiktok" href="#" title="We are iTiktok">TikTok </a></li>
-            <li class="socials-list__item"><a class="socials-list_type_vk" href="#" title="We are VKontakte">VKontakte</a></li>
-            <li class="socials-list__item"><a class="socials-list_type_dzen" href="#" title="We are Zen">Zen</a></li>
-            <li class="socials-list__item"><a class="socials-list_type_instagram" href="#" title="Our Instagram">Instagram </a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_youtube" href="#" title="Наш канал в Ютубе">YouTube</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_tiktok" href="#" title="Мы в ТикТоке">TikTok </a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="Мы ВКонтакте">VKontakte</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href="#" title="Мы Дзене">Дзен</a></li>
+            <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
           </ul>
         </div>
-				<a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
+        <a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
         <div class="footer__copyright">
-          <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">SFERA position</a></p>
-          <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — SFERA Project | All rights reserved by SPHERE LLC</p>
+          <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">Podmínky používání SFERA</a></p>
+          <p class="footer__copyright-text">© Copyright 2019-2023 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a>- Projekt SFERA | Všechna práva jsou vyhrazena SRO «SFERA»</p>
         </div>
-      </div></footer>
+      </div>
+    </footer>
     </div>
    <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
    <script src="assets/js/main.3.ddda2f0e.js" defer></script>
