--- a/cs/investment.html
+++ b/cs/investment.html
@@ -123,8 +123,8 @@
                       <img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
                   </div>
                   <div class="list_lang-tablet">
-                      <a class="lang_list-link" href="./../en/apps.html"> Angličtina</a>
-                      <a class="lang_list-link" href="../ru/apps.html">Ruština</a>
+                      <a class="lang_list-link" href="./../en/investment.html"> Angličtina</a>
+                      <a class="lang_list-link" href="../ru/investment.html">Ruština</a>
                       <a class="lang_list-link active" href="#">Čeština</a>
                   </div>
               </li>
