--- a/en/apps.html
+++ b/en/apps.html
@@ -116,7 +116,7 @@
           <span class="close_menu">&#10006;</span>
         </li>
         <li class="nav_list-item"><a class="nav_list-link" href="../index.html">SFERA Project</a></li>
-        <li class="nav_list-item active"><a class="nav_list-link" href="./../en/apps.html">Applications</a></li>
+        <li class="nav_list-item active"><a class="nav_list-link" href="#">Applications</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download SFERA</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
@@ -128,8 +128,8 @@
               </div>
               <div class="list_lang-tablet">
                 <a class="lang_list-link active" href="#"> English</a>
-                <a class="lang_list-link" href="../ru/index.html">Russian</a>
-                <a class="lang_list-link" href="../cs/index.html">Ceština</a>
+                <a class="lang_list-link" href="../ru/apps.html">Russian</a>
+                <a class="lang_list-link" href="../cs/apps.html">Ceština</a>
               </div>
 
           </li>
