--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -127,7 +127,7 @@
             <div class="list_lang-tablet">
               <a class="lang_list-link active" href="#"> Русский</a>
               <a class="lang_list-link" href="../ru/downloads.html">Английский</a>
-              <a class="lang_list-link" href="">Чешский</a>
+              <a class="lang_list-link" href="../cs/downloads.html">Чешский</a>
             </div>
 
           </li>
