--- a/ru/news.html
+++ b/ru/news.html
@@ -125,7 +125,7 @@
                       <div class="list_lang-tablet">
                           <a class="lang_list-link active" href="#"> Русский</a>
                           <a class="lang_list-link" href="../en/news.html">Английский</a>
-                          <a class="lang_list-link" href="">Чешский</a>
+                          <a class="lang_list-link" href="../cs/news.html">Чешский</a>
                       </div>
 
                   </li>
