--- a/ru/team.html
+++ b/ru/team.html
@@ -126,7 +126,7 @@
                         <div class="list_lang-tablet">
                             <a class="lang_list-link active" href="#"> Русский</a>
                             <a class="lang_list-link" href="../en/team.html">Английский</a>
-                            <a class="lang_list-link" href="">Чешский</a>
+                            <a class="lang_list-link" href="../cs/team.html">Чешский</a>
                         </div>
 
                     </li>
