--- a/en/investment.html
+++ b/en/investment.html
@@ -116,7 +116,7 @@
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download SFERA</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
-        <li class="nav_list-item active"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
+        <li class="nav_list-item active"><a class="nav_list-link" href="#">Investment</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
         <li class="lang_tablet" >
           <div class="img_lang">
