--- a/en/news.html
+++ b/en/news.html
@@ -115,7 +115,7 @@
         <li class="nav_list-item"><a class="nav_list-link" href="../index.html">SFERA Project</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/apps.html">Applications</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download SFERA</a></li>
-        <li class="nav_list-item active"><a class="nav_list-link" href="./../en/news.html">News</a></li>
+        <li class="nav_list-item active"><a class="nav_list-link" href="#">News</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
