--- a/en/team.html
+++ b/en/team.html
@@ -117,7 +117,7 @@
                  <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
                  <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
                  <li class="nav_list-item"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
-                 <li class="nav_list-item active"><a class="nav_list-link" href="./../en/team.html">Team</a></li>
+                 <li class="nav_list-item active"><a class="nav_list-link" href="#">Team</a></li>
                  <li class="lang_tablet" >
                      <div class="img_lang">
                          <img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
