--- a/ru/startups.html
+++ b/ru/startups.html
@@ -127,7 +127,7 @@
             <div class="list_lang-tablet">
               <a class="lang_list-link active" href="#"> Русский</a>
               <a class="lang_list-link" href="../en/startups.html">Английский</a>
-              <a class="lang_list-link" href="">Чешский</a>
+              <a class="lang_list-link" href="../cs/startups.html">Чешский</a>
             </div>
 
           </li>
