--- a/cs/downloads.html
+++ b/cs/downloads.html
@@ -115,7 +115,7 @@
                 </li>
                 <li class="nav_list-item"><a class="nav_list-link" href="./../cs/index.html">Hlavní</a></li>
                 <li class="nav_list-item "><a class="nav_list-link" href="./../cs/apps.html">Aplikace</a></li>
-                <li class="nav_list-item active"><a class="nav_list-link" href="./../cs/downloads.html">Stáhnout</a></li>
+                <li class="nav_list-item active"><a class="nav_list-link" href="#">Stáhnout</a></li>
                 <li class="nav_list-item"><a class="nav_list-link" href="./../cs/news.html">Novinky</a></li>
                 <li class="nav_list-item"><a class="nav_list-link" href="./../cs/startups.html">Startupy</a></li>
                 <li class="nav_list-item"><a class="nav_list-link" href="./../cs/investment.html">Investice</a></li>
