--- a/cs/investment.html
+++ b/cs/investment.html
@@ -117,7 +117,7 @@
                 <li class="nav_list-item"><a class="nav_list-link" href="./../cs/downloads.html">Stáhnout</a></li>
                 <li class="nav_list-item"><a class="nav_list-link" href="./../cs/news.html">Novinky</a></li>
                 <li class="nav_list-item"><a class="nav_list-link" href="./../cs/startups.html">Startupy</a></li>
-                <li class="nav_list-item active"><a class="nav_list-link" href="./../cs/investment.html">Investice</a></li>
+                <li class="nav_list-item active"><a class="nav_list-link" href="#">Investice</a></li>
                 <li class="nav_list-item"><a class="nav_list-link" href="./../cs/team.html">Tým</a></li>
                 <li class="lang_tablet" >
                   <div class="img_lang">
