--- a/cs/startups.html
+++ b/cs/startups.html
@@ -118,7 +118,7 @@
               <li class="nav_list-item"><a class="nav_list-link" href="./../cs/apps.html">Aplikace</a></li>
               <li class="nav_list-item"><a class="nav_list-link" href="./../cs/downloads.html">Stáhnout</a></li>
               <li class="nav_list-item"><a class="nav_list-link" href="./../cs/news.html">Novinky</a></li>
-              <li class="nav_list-item active"><a class="nav_list-link" href="./../cs/startups.html">Startupy</a></li>
+              <li class="nav_list-item active"><a class="nav_list-link" href="#">Startupy</a></li>
               <li class="nav_list-item"><a class="nav_list-link" href="./../cs/investment.html">Investice</a></li>
               <li class="nav_list-item"><a class="nav_list-link" href="./../cs/team.html">Tým</a></li>
               <li class="lang_tablet" >
@@ -126,8 +126,8 @@
                     <img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
                 </div>
                 <div class="list_lang-tablet">
-                    <a class="lang_list-link" href="./../en/apps.html"> Angličtina</a>
-                    <a class="lang_list-link" href="../ru/apps.html">Ruština</a>
+                    <a class="lang_list-link" href="./../en/startups.html"> Angličtina</a>
+                    <a class="lang_list-link" href="../ru/startups.html">Ruština</a>
                     <a class="lang_list-link active" href="#">Čeština</a>
                 </div>
             </li>
