--- a/cs/index.html
+++ b/cs/index.html
@@ -125,8 +125,8 @@
 									<img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
 							</div>
 							<div class="list_lang-tablet">
-									<a class="lang_list-link" href="../en/apps.html"> Angličtina</a>
-									<a class="lang_list-link" href="../ru/apps.html">Ruština</a>
+									<a class="lang_list-link" href="../index.html"> Angličtina</a>
+									<a class="lang_list-link" href="../ru/index.html">Ruština</a>
 									<a class="lang_list-link active" href="#">Čeština</a>
 							</div>
 					</li>
