--- a/ru/index.html
+++ b/ru/index.html
@@ -123,7 +123,7 @@
 								<img class="img_lang-tablet" src="../assets/img/language_tablet.png" alt="">
 							</div>
 							<div class="list_lang-tablet">
-								<a class="lang_list-link active" href=""> Русский</a>
+								<a class="lang_list-link active" href="#"> Русский</a>
 								<a class="lang_list-link" href="../index.html">Английский</a>
 								<a class="lang_list-link" href="../cs/index.html">Чешский</a>
 							</div>
