--- a/cs/investment.html
+++ b/cs/investment.html
@@ -148,8 +148,8 @@
                 <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS</a>
                     <div class="dropdown-menu__content langs__submenu">
                         <ul class="langs__list">
-                            <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/apps.html">EN</a></li>
-                            <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/apps.html">RU</a></li>
+                            <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/investment.html">EN</a></li>
+                            <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/index.html">RU</a></li>
                         </ul>
                     </div>
                 </li>
