--- a/cs/team.html
+++ b/cs/team.html
@@ -149,8 +149,8 @@
                     <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">CS</a>
                         <div class="dropdown-menu__content langs__submenu">
                             <ul class="langs__list">
-                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/apps.html">EN</a></li>
-                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/apps.html">RU</a></li>
+                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../en/team.html">EN</a></li>
+                                <li class="langs__item"> <a class="langs__link  button_theme_dark" href="../ru/team.html">RU</a></li>
 
                             </ul>
                         </div>
@@ -160,9 +160,7 @@
         </nav>
     <main>
         <div class="team">
-
             <div class="team__title">NÁŠ TÝM</div>
-
             <div class="team__body">
                 <div class="team__column">
                     <a class="block-team__item block-team__item_b item" href="#">
