--- a/cs/apps.html
+++ b/cs/apps.html
@@ -183,7 +183,7 @@
                                 <p class="apps__subapps-list-item-title">Můj profil</p>
                             </a></li>
                         <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#lenta"><img  src="../assets/img/apps/icon-lenta.svg" class="apps__subapps-list-item-icon" />
-                                <p class="apps__subapps-list-item-title">SFERA NewsFeed</p>
+                                <p class="apps__subapps-list-item-title">NewsFeed</p>
 
                         <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#asap"><img  src="../assets/img/apps/icon-asap.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">ASAP</p>
@@ -391,8 +391,8 @@
                     <li class="apps__briefs-item" id="joblite">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/joblite_ios.png" class="apps__brief-image" alt="подприложение по поиску работы айфон" /></div>
-                            <div class="apps__brief-image-wrapper"><img src="../assets/en-img/joblite_android.png" class="apps__brief-image" alt="подприложение по поиску работы андроид" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/JL.png" class="apps__brief-image" alt="подприложение по поиску работы айфон" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/en-img/JL2.png" class="apps__brief-image" alt="подприложение по поиску работы андроид" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
