--- a/cs/index.html
+++ b/cs/index.html
@@ -134,9 +134,6 @@
 					<a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="../assets/img/buttons/button-image.svg">Stáhnout na Android</a>
 					<a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="../assets/img/buttons/button-apple.svg">Stáhnout na IOS</a>
 				</li>
-
-
-
 						<li class="link_tablet-menu" >
 							<a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
 							<a class="menu-links" href="#"><i class="fa-brands fa-tiktok fa-xl"></i></a>
@@ -190,8 +187,8 @@
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<span ><img class="section-two-image-one" src="../assets/image-lending/300х600_андроид_меню/300х600-андроид.gif" alt="Андроид меню"></span>
-					<span><img class="section-two-image-two" src="../assets/image-lending/300х600_айфон_меню/300х600-айфон.gif" alt="Айфон меню"></span>
+					<span ><img class="section-two-image-one" src="../assets/image-lending/1920/block2ios.gif" alt="Андроид меню"></span>
+					<span><img class="section-two-image-two" src="../assets/image-lending/1920/block2ios.gif" alt="Айфон меню"></span>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
