--- a/en/apps.html
+++ b/en/apps.html
@@ -376,8 +376,8 @@
                     <li class="apps__briefs-item" id="joblite">
                       <div class="apps__brief-images-container">
                         <div class="apps__brief-images-container">
-                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/joblite_ios.png" class="apps__brief-image" alt="sub-application for job search iphone" /></div>
-                            <div class="apps__brief-image-wrapper"><img src="../assets/en-img/joblite_android.png" class="apps__brief-image" alt="android job search sub-application" /></div>
+                          <div class="apps__brief-image-wrapper"><img src="../assets/en-img/JL.png" class="apps__brief-image" alt="sub-application for job search iphone" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/en-img/JL2.png" class="apps__brief-image" alt="android job search sub-application" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
@@ -402,7 +402,7 @@
                       <div class="apps__brief-images-container" id="findfriend">
                         <div class="apps__brief-images-container" >
                           <div class="apps__brief-image-wrapper"><img src="../assets/en-img/findfriendios.png" class="apps__brief-image" alt="search for new friends in real offline life" /></div>
-                            <div class="apps__brief-image-wrapper"><img src="../assets/en-imgfindfriendandroid.png" class="apps__brief-image" alt="search for new friends in real offline life" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/en-img/findfriendandroid.png" class="apps__brief-image" alt="search for new friends in real offline life" /></div>
                       </div>
                     </div>
                         <div class="apps__brief-text-container">
