--- a/en/news.html
+++ b/en/news.html
@@ -131,8 +131,8 @@
 
         </li>
         <li class="download_button-tablet">
-          <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="assets/img/buttons/button-image.svg"> Download on Android</a>
-          <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="assets/img/buttons/button-apple.svg" >Download on iOS</a>
+          <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="coloWhite button_download "><img src="../assets/img/buttons/button-image.svg"> Download on Android</a>
+          <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" coloWhite button_download "><img src="../assets/img/buttons/button-apple.svg" >Download on iOS</a>
         </li>
         <li class="link_tablet-menu" >
           <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
