--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@
 				</ul>
 			</section>
 		</main>
+		</div>
 		<footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
         <div class="footer__contacts">
