--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -126,14 +126,14 @@
             </div>
             <div class="list_lang-tablet">
               <a class="lang_list-link active" href="#"> Русский</a>
-              <a class="lang_list-link" href="../ru/downloads.html">Английский</a>
+              <a class="lang_list-link" href="../en/downloads.html">Английский</a>
               <a class="lang_list-link" href="../cs/downloads.html">Чешский</a>
             </div>
 
           </li>
           <li class="download_button-tablet">
-            <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="/assets/img/buttons/button-image.svg"> Скачать на Android </a>
-            <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="/assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
+            <a href="https://play.google.com/store/apps/details?id=zone.sfera" class="colorWhite button_download "><img src="../assets/img/buttons/button-image.svg"> Скачать на Android </a>
+            <a href="https://apps.apple.com/app/sfera-project/id1498046044" class=" colorWhite button_download "><img src="../assets/img/buttons/button-apple.svg" >Скачать на iOS</a>
           </li>
           <li class="link_tablet-menu" >
             <a class="menu-links" href="#"><i class="fa-brands fa-youtube fa-xl"></i></a>
