--- a/ru/index.html
+++ b/ru/index.html
@@ -228,7 +228,7 @@
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back"src="../assets/img/apps/asap_android.png" alt="ASAP андроид">
+								<img class="back"src="../assets/image-lending/1920/01-asap-android-rus.gif" alt="ASAP андроид">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -245,7 +245,7 @@
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="../assets/img/apps/profile_android.png" alt="Профиль андроид">
+								<img class="back" src="../assets/image-lending/1920/02-profile-android-rus.gif" alt="Профиль андроид">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -262,7 +262,7 @@
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="../assets/img/apps/lenta_android.png" alt="Лента новостей андроид">
+								<img class="back" src="../assets/image-lending/1920/03-lenta-android-rus.gif" alt="Лента новостей андроид">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -279,7 +279,7 @@
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="../assets/img/apps/videos_android.png" alt="Видео на андроиде">
+								<img class="back" src="../assets/image-lending/1920/04-videos-android-rus.gif" alt="Видео на андроиде">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -296,7 +296,7 @@
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="../assets/img/apps/blackbox_android.png" alt="Blackbox андроид">
+								<img class="back" src="../assets/image-lending/1920/05-black-box-android-rus.gif" alt="Blackbox андроид">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -313,7 +313,7 @@
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="../assets/img/apps/findfriends_android.png" alt="Поиск друзей">
+								<img class="back" src="../assets/image-lending/1920/06-FF-android-rus.gif" alt="Поиск друзей">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -330,7 +330,7 @@
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="../assets/img/apps/meetnet_android.png" alt="Найти  вторую половинку">
+								<img class="back" src="../assets/image-lending/1920/07-Meet-Net-android-rus.gif" alt="Найти  вторую половинку">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -347,7 +347,7 @@
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="../assets/img/apps/joblite_android.png" alt="Поиск работы ">
+								<img class="back" src="../assets/image-lending/1920/08-job-lite-android-rus.gif" alt="Поиск работы ">
 							</div>
 						</div>
 						<div class="left-side"></div>
@@ -364,7 +364,7 @@
 						</div>
 						<div class="product-back">
 							<div>
-								<img class="back" src="../assets/img/apps/choose_android.png" alt="Красифые картинки айфон">
+								<img class="back" src="../assets/image-lending/1920/09-choose-android-rus.gif" alt="Красифые картинки айфон">
 							</div>
 						</div>
 						<div class="left-side"></div>
