--- a/cs/apps.html
+++ b/cs/apps.html
@@ -171,8 +171,8 @@
                       <h1 class="apps__subapps-title">my vytváříme<br><span class="lead__text-color" >superaplikaci </span></h1>
                     </div>
                     <div>
-                      <p class="lead__text">Všechny servisy jsou nedílnou součástí SFERA a fungují jako jediná aplikace.</p>
-                      <p class="lead__text">Momentálně jsou v systému dostupné servisy první fáze vývoje.</p>
+                      <p class="lead__text">Všechny servisy jsou nedílnou součástí<br> SFERA a fungují jako jediná aplikace.</p>
+                      <p class="lead__text">Momentálně jsou v systému<br> dostupné servisy první fáze vývoje.</p>
 
                       </p>
                     </div>
@@ -183,7 +183,7 @@
                                 <p class="apps__subapps-list-item-title">Můj profil</p>
                             </a></li>
                         <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#lenta"><img  src="../assets/img/apps/icon-lenta.svg" class="apps__subapps-list-item-icon" />
-                                <p class="apps__subapps-list-item-title">NewsFeed</p>
+                                <p class="apps__subapps-list-item-title">SFERA Feed</p>
 
                         <li class="apps__subapps-list-item"><a class="apps__subapps-list-item-link link" href="#asap"><img  src="../assets/img/apps/icon-asap.svg" class="apps__subapps-list-item-icon" />
                                 <p class="apps__subapps-list-item-title">ASAP</p>
@@ -245,8 +245,8 @@
                     </div>
                         <div class="apps__brief-text-container">
 
-                          <h2 class="section__title">SFERA NewsFeed</h2>
-                          <p class="apps__brief-text">Agregátor kontentu SFERA, který bude formovat váš NEWSFEED s rozvíjejícím se kontentem. Servis nerozhoduje za Vás, co Vám ukazovat. Uvidíte veškerý kontent, který odebíráte, plus nejlepší v systému za určitou dobu.</p>
+                          <h2 class="section__title">SFERA Feed</h2>
+                          <p class="apps__brief-text">Agregátor kontentu SFERA, který bude formovat váš newsfeed s rozvíjejícím se kontentem. Servis nerozhoduje za Vás, co Vám ukazovat. Uvidíte veškerý kontent, který odebíráte, plus nejlepší v systému za určitou dobu.</p>
 
                         </div>
                         <ul class="apps__briefs-item-list">
@@ -294,7 +294,7 @@
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">Meetnet</h2>
 
-                          <p class="apps__brief-text">MeetNet — servis pro sezámení, synchronizovaný s osobním profilem. Lidé jsou vybíráni podle více než 50 parametrů.<br><br> Tento přístup v budoucnu umožní vytvářet téměř dokonalé páry.</p>
+                          <p class="apps__brief-text">MeetNet — servis pro sezámení, synchronizovaný s osobním profilem. Lidé jsou vybíráni podle více než 50 parametrů.<br><br> Tento přístup v budoucnu umožní vytvářet<br> téměř dokonalé páry.</p>
 
                         </div>
                         <ul class="apps__briefs-item-list">
@@ -345,7 +345,7 @@
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">Black Box</h2>
 
-                            <p class="apps__brief-text">Umožňuje nacházet novou společnost podle geolokace a mluvit na jakékoli téma s jakýmkoli uživatelem. Pro ty, kterým chybí komunikace a i u koho jsou otázky na komplikovaná témata.</p>
+                            <p class="apps__brief-text">Umožňuje nacházet novou společnost podle geolokace a mluvit na jakékoli téma s jakýmkoli uživatelem.<br> Pro ty, kterým chybí komunikace a i u koho jsou<br> otázky na komplikovaná témata.</p>
 
                         </div>
                         <ul class="apps__briefs-item-list">
@@ -372,7 +372,7 @@
                         <div class="apps__brief-text-container">
                           <h2 class="section__title">Videos</h2>
 
-                            <p class="apps__brief-text">Video servis, jejíž hlavní výhodou je poskytování mimořádně užitečného, ​​rozvíjejícího se zajímavého obsahu.</p>
+                            <p class="apps__brief-text">Video servis, jehož hlavní výhodou je poskytování mimořádně užitečného, ​​rozvíjejícího, zajímavého obsahu.</p>
 
                         </div>
                         <ul class="apps__briefs-item-list">
@@ -446,7 +446,7 @@
         </section>
         <section class="section apps__future">
 
-            <h2 class="section__title align_wiper">služby druhé fáze vývoje</h2>
+            <h2 class="section__title align_wiper">Servisy druhé fáze vývoje</h2>
 
             <div class="swiper">
                 <div class="swiper-wrapper apps__future-slide">
@@ -502,7 +502,7 @@
         </section>
         <section class="section apps__future">
 
-          <h2 class="section__title align_wiper">služby druhé fáze vývoje</h2>
+          <h2 class="section__title align_wiper">Servisy třetí fáze vývoje</h2>
 
           <div class="swiper">
               <div class="swiper-wrapper apps__future-slide">
