--- a/cs/index.html
+++ b/cs/index.html
@@ -256,7 +256,7 @@
 						</div>
 						<div class="left-side"></div>
 					</div>
-					<p class="card-block-botton">Osobní stránka s soukromými informací</p>
+					<p class="card-block-botton">Osobní stránka s personální informací</p>
 				</div>
 
 				<div class="card-block">
@@ -408,7 +408,7 @@
 				</article>
 			</section>
 			<section class="block-eight">
-				<p class="about-as-heading-last">NYNÍ MÁME VE <span class="about-as-heading-color">VÝVOJI VÍCE NEŽ 20</span> SLUŽEB </p>
+				<p class="about-as-heading-last">NYNÍ MÁME VE VÝVOJI <span class="about-as-heading-color"> VÍCE NEŽ 20  SLUŽEB</span></p>
 				<ul class="block-eight-card">
 					<li class="block-eight-card-list">
 						<img class="block-eight-card-image" src="../assets/image-lending/general/1 921.png" alt="Události">
