--- a/cs/investment.html
+++ b/cs/investment.html
@@ -164,8 +164,8 @@
           <div class="investment-body">
             <div class="investment-body-content">
 
-              <h1 class="investment-body__title">zveme  <span class="investment-body__title_color">investorů</span></h1>
-              <p class="investment-body__text">V současné době je projekt financován na úkor vlastních prostředků a prostředků<br> investorů.</p>
+              <h1 class="investment-body__title">zveme <br><span class="investment-body__title_color">investory</span></h1>
+              <p class="investment-body__text">V současné době je projekt financován na úkor vlastních prostředků a prostředků investorů.</p>
               <p class="investment-body__text">Naším hlavním cílem při práci s investory — je X100<br> pro investory</p>
               <ul class="lead__download-links-list">
                 <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Stáhnout na Android</a></li>
@@ -197,7 +197,7 @@
                 <li class="card-body__list_3"> Pošlete E-mail s uvedením částky transakce. Zpětným dopisem my potvrdíme vámi zaslanou částku a spojíme ji s vaším E-mail.</li>
                 <div class="card-body__list_4">invest@sfera.zone <button onclick="copyTextTwo()" class="card-body__list_copy" ><img src="../assets/img/investment/content_copy.svg" alt=""></button></div>
               </ol>
-              <div class="card-body__text">Když budete uskutečňovat transakci potvrzujete, že jasně rozumíte základům a pojmu investování rizikového kapitálu a principům startupu a také všem rizikům s tím spojeným.</div>
+              <div class="card-body__text">Při uskutečňování transakce potvrzujete, že jasně rozumíte základům a pojmu investování rizikového kapitálu a principům startupu a také všem rizikům s tím spojeným.</div>
 
             </div>
           </div>
