--- a/cs/startups.html
+++ b/cs/startups.html
@@ -166,7 +166,7 @@
           <div class="lead">
             <div class="lead__texts">
 
-              <h1 class="lead__title">Zvát<br><span class="lead__title-color">startupy</span></h1>
+              <h1 class="lead__title">ZVEME<br><span class="lead__title-color">startupy</span></h1>
               <p class="lead__text">Pro stávající startupy, které jsou ve fázivývoje nebo již mají funkčni aplikaci, jsme připraveni zvážit integraci do SFERA za splnění následujících podmínek.</p>
               <div class="lead__links-container apps__lead-links-container">
                 <ul class="lead__download-links-list">
@@ -186,10 +186,10 @@
           <div class="description__list__main">
             <div class="description__list__items">
 
-              <h2 class="description__list__heading">podmínky spolupráce</h2>
+              <h2 class="description__list__heading">Podmínky spolupráce</h2>
               <ol class="description__list">
                 <li class="description__list__paragraf">Servis musí být užitečným (rozvíjejícím se) a měl by mít pozitivní dopad na offline-život uživatele.</li>
-                <li class="description__list__paragraf">Máte dobře navržený layout, koncept (včetně úplného vykreslení servisu ve Figma, technické popis-úkol), ale není finanční příležitost realizovat servis?</li>
+                <li class="description__list__paragraf">Máte dobře navržený layout, koncept (včetně úplného navržení servisu ve Figma, technické popis-úkol), ale není finanční příležitost realizovat servis?</li>
               </ol>
               <h2 class="description__list__heading">Výhody</h2>
               <ol class="description__list">  
