--- a/index.html
+++ b/index.html
@@ -215,164 +215,164 @@
 					<span ><img class="block-for-image-two" src="assets/en-img/block 3-2.png" alt="Download the app for android"></span>
 				</div>
 			</section>
-		<section class="section-card">
-			<p class="about-as-heading">WHAT’S OUT <span class="about-as-heading-color"> THERE RIGHT NOW</span></p>
-			<div class="card">
-				<div class="card-block">
-					<button class="card-block-top">ASAP</button>
-					<div class="product-inner">
-						<div class="product-front">
+		<section class="section-card eng-section-card">
+			<p class="about-as-heading eng-about-as-heading">WHAT’S OUT <span class="about-as-heading-color"> THERE RIGHT NOW</span></p>
+			<div class="card eng-card">
+				<div class="card-block eng-card-block">
+					<button class="card-block-top eng-card-block-top">ASAP</button>
+					<div class="product-inner eng-product-inner">
+						<div class="product-front eng-product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios1.png" alt="ASAP iPhone">
+								<img class="front eng-front" src="assets/image-lending/1920/ios1.png" alt="ASAP iPhone">
 							</div>
 						</div>
-						<div class="product-back">
+						<div class="product-back eng-product-back">
 							<div>
-								<img class="back"src="assets/img/apps/asap_android.png" alt="ASAP android">
+								<img class="back eng-back"src="assets/img/apps/asap_android.png" alt="ASAP android">
 							</div>
 						</div>
-						<div class="left-side"></div>
+						<div class="left-side eng-left-side"></div>
 					</div>
-					<p class="card-block-botton">Multifunctional messenger</p>
+					<p class="card-block-botton eng-card-block-botton">Multifunctional messenger</p>
 				</div>
-				<div class="card-block">
-					<button class="card-block-top">Profile</button>
-					<div class="product-inner">
-						<div class="product-front">
+				<div class="card-block eng-card-block">
+					<button class="card-block-top eng-card-block-top">Profile</button>
+					<div class="product-inner eng-product-inner">
+						<div class="product-front eng-product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios2.png" alt="iPhone Profile">
+								<img class="front eng-front" src="assets/image-lending/1920/ios2.png" alt="iPhone Profile">
 							</div>
 						</div>
-						<div class="product-back">
+						<div class="product-back eng-product-back">
 							<div>
-								<img class="back" src="assets/img/apps/profile_android.png" alt="Android Profile">
+								<img class="back eng-back" src="assets/img/apps/profile_android.png" alt="Android Profile">
 							</div>
 						</div>
-						<div class="left-side"></div>
+						<div class="left-side eng-left-side"></div>
 					</div>
-					<p class="card-block-botton">Personal page with personal information</p>
+					<p class="card-block-botton eng-card-block-botton">Personal page with personal information</p>
 				</div>
-				<div class="card-block">
-					<button class="card-block-top">Feed</button>
-					<div class="product-inner">
-						<div class="product-front">
+				<div class="card-block eng-card-block">
+					<button class="card-block-top eng-card-block-top">Feed</button>
+					<div class="product-inner eng-product-inner">
+						<div class="product-front eng-product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios3.png" alt="iPhone News Feed">
+								<img class="front eng-front" src="assets/image-lending/1920/ios3.png" alt="iPhone News Feed">
 							</div>
 						</div>
-						<div class="product-back">
+						<div class="product-back eng-product-back">
 							<div>
-								<img class="back" src="assets/img/apps/lenta_android.png" alt="Android News Feed">
+								<img class="back eng-back" src="assets/img/apps/lenta_android.png" alt="Android News Feed">
 							</div>
 						</div>
-						<div class="left-side"></div>
+						<div class="left-side eng-left-side"></div>
 					</div>
-					<p class="card-block-botton">News Feed with educational content</p>
+					<p class="card-block-botton eng-card-block-botton">News Feed with educational content</p>
 				</div>
-				<div class="card-block">
-					<button class="card-block-top">VideoS</button>
-					<div class="product-inner">
-						<div class="product-front">
+				<div class="card-block eng-card-block">
+					<button class="card-block-top eng-card-block-top">VideoS</button>
+					<div class="product-inner eng-product-inner">
+						<div class="product-front eng-product-front">
 							<div>
-								<img  class="front" src="assets/image-lending/1920/ios4.png" alt="Video on iPhone">
+								<img  class="front eng-front" src="assets/image-lending/1920/ios4.png" alt="Video on iPhone">
 							</div>
 						</div>
-						<div class="product-back">
+						<div class="product-back eng-product-back">
 							<div>
-								<img class="back" src="assets/img/apps/videos_android.png" alt="Videos on android">
+								<img class="back eng-back" src="assets/img/apps/videos_android.png" alt="Videos on android">
 							</div>
 						</div>
-						<div class="left-side"></div>
+						<div class="left-side eng-left-side"></div>
 					</div>
-					<p class="card-block-botton">Short videos with useful content</p>
+					<p class="card-block-botton eng-card-block-botton">Short videos with useful content</p>
 				</div>
-				<div class="card-block">
-					<button class="card-block-top">BlackBox</button>
-					<div class="product-inner">
-						<div class="product-front">
+				<div class="card-block eng-card-block">
+					<button class="card-block-top eng-card-block-top">BlackBox</button>
+					<div class="product-inner eng-product-inner">
+						<div class="product-front eng-product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios5.png" alt="Blackbox iPhone">
+								<img class="front eng-front" src="assets/image-lending/1920/ios5.png" alt="Blackbox iPhone">
 							</div>
 						</div>
-						<div class="product-back">
+						<div class="product-back eng-product-back">
 							<div>
-								<img class="back" src="assets/img/apps/blackbox_android.png" alt="Blackbox android">
+								<img class="back eng-back" src="assets/img/apps/blackbox_android.png" alt="Blackbox android">
 							</div>
 						</div>
-						<div class="left-side"></div>
+						<div class="left-side eng-left-side"></div>
 					</div>
-					<p class="card-block-botton">Communication search service based on geolocation</p>
+					<p class="card-block-botton eng-card-block-botton">Communication search service based on geolocation</p>
 				</div>
-				<div class="card-block">
-					<button class="card-block-top">FindFriends</button>
-					<div class="product-inner">
-						<div class="product-front">
+				<div class="card-block eng-card-block">
+					<button class="card-block-top eng-card-block-top">FindFriends</button>
+					<div class="product-inner eng-product-inner">
+						<div class="product-front eng-product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios6.png" alt="Search for friends">
+								<img class="front eng-front" src="assets/image-lending/1920/ios6.png" alt="Search for friends">
 							</div>
 						</div>
-						<div class="product-back">
+						<div class="product-back eng-product-back">
 							<div>
-								<img class="back" src="assets/img/apps/findfriends_android.png" alt="Search for friends">
+								<img class="back eng-back" src="assets/img/apps/findfriends_android.png" alt="Search for friends">
 							</div>
 						</div>
-						<div class="left-side"></div>
+						<div class="left-side eng-left-side"></div>
 					</div>
-					<p class="card-block-botton">Finding Friends In offline life</p>
+					<p class="card-block-botton eng-card-block-botton">Finding Friends In offline life</p>
 				</div>
-				<div class="card-block">
-					<button class="card-block-top">MeetNet</button>
-					<div class="product-inner">
-						<div class="product-front">
+				<div class="card-block eng-card-block">
+					<button class="card-block-top eng-card-block-top">MeetNet</button>
+					<div class="product-inner eng-product-inner">
+						<div class="product-front eng-product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios7.png" alt="Find a soul mate">
+								<img class="front eng-front" src="assets/image-lending/1920/ios7.png" alt="Find a soul mate">
 							</div>
 						</div>
-						<div class="product-back">
+						<div class="product-back eng-product-back">
 							<div>
-								<img class="back" src="assets/img/apps/meetnet_android.png" alt="Find a soul mate">
+								<img class="back eng-back" src="assets/img/apps/meetnet_android.png" alt="Find a soul mate">
 							</div>
 						</div>
-						<div class="left-side"></div>
+						<div class="left-side eng-left-side"></div>
 					</div>
-					<p class="card-block-botton">Sub-Application for dating and finding beloved one</p>
+					<p class="card-block-botton eng-card-block-botton">Sub-Application for dating and finding beloved one</p>
 				</div>
-				<div class="card-block">
-					<button class="card-block-top">JobLite</button>
-					<div class="product-inner">
-						<div class="product-front">
+				<div class="card-block eng-card-block">
+					<button class="card-block-top eng-card-block-top">JobLite</button>
+					<div class="product-inner eng-product-inner">
+						<div class="product-front eng-product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios8.png" alt="Job search">
+								<img class="front eng-front" src="assets/image-lending/1920/ios8.png" alt="Job search">
 							</div> 
 						</div>
-						<div class="product-back">
+						<div class="product-back eng-product-back">
 							<div>
-								<img class="back" src="assets/img/apps/joblite_android.png" alt="Job search">
+								<img class="back eng-back" src="assets/img/apps/joblite_android.png" alt="Job search">
 							</div>
 						</div>
-						<div class="left-side"></div>
+						<div class="left-side eng-left-side"></div>
 					</div>
-					<p class="card-block-botton">Search platform for jobs and employees</p>
+					<p class="card-block-botton eng-card-block-botton">Search platform for jobs and employees</p>
 				</div>
-				<div class="card-block">
-					<button class="card-block-top">Choose</button>
-					<div class="product-inner">
-						<div class="product-front">
+				<div class="card-block eng-card-block">
+					<button class="card-block-top eng-card-block-top">Choose</button>
+					<div class="product-inner eng-product-inner">
+						<div class="product-front eng-product-front">
 							<div>
-								<img class="front" src="assets/image-lending/1920/ios9.png" alt="Beautiful iPhone pictures">
+								<img class="front eng-front" src="assets/image-lending/1920/ios9.png" alt="Beautiful iPhone pictures">
 							</div>
 						</div>
-						<div class="product-back">
+						<div class="product-back eng-product-back">
 							<div>
-								<img class="back" src="assets/img/apps/choose_android.png" alt="Beautiful iPhone pictures">
+								<img class="back eng-back" src="assets/img/apps/choose_android.png" alt="Beautiful iPhone pictures">
 							</div>
 						</div>
-						<div class="left-side"></div>
+						<div class="left-side eng-left-side"></div>
 					</div>
-					<p class="card-block-botton">Tough choice? Askadvice from other users</p>
+					<p class="card-block-botton eng-card-block-botton">Tough choice? Askadvice from other users</p>
 				</div>
-				<div class="card-block card-block-botton">
-					<a class="card-block__link"  href="./en/apps.html">SFERA Applications &#8702; </a>
+				<div class="card-block card-block-botton eng-card-block eng-card-block-botton">
+					<a class="card-block__link eng-card-block__link"  href="./en/apps.html">SFERA Applications &#8702; </a>
 				</div>
 			</div>
 		</section> 
