--- a/cs/investment.html
+++ b/cs/investment.html
@@ -238,7 +238,7 @@
                   "
 
                 </span></li>
-                <a id="btn" onclick="readMore()">Читать больше</a>
+                <a id="btn" onclick="readMore()">číst více</a>
               </ul>
             </div>
           </div>
@@ -305,7 +305,7 @@
     </footer>
   </div>
   <script src="https://kit.fontawesome.com/d455f88091.js" crossorigin="anonymous"></script>
-  <script src="../assets/js/invest.js"></script>
+  <script src="../assets/js/invest cs.js"></script>
   <script src="../assets/js/main.js"></script>
 </body>
 
