--- a/en/team.html
+++ b/en/team.html
@@ -184,7 +184,7 @@
                         <p class="item__person-name">Diane<span class="item__person-role">CMO</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/3.png" class="team__photo" alt="Фото участника команды SFERA" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
-                        <p class="item__person-name">Vladimir <span class="item__person-role">CTO, Golang разработчик</span></p>
+                        <p class="item__person-name">Vladimir <span class="item__person-role">CTO, Golang developer</span></p>
                     </span><span class="item__image ibg"><img src="../assets/img/team/4.png"class="team__photo" alt="Фото участника команды SFERA" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
                         <p class="item__person-name">Aubakir <span class="item__person-role">System Analyst, QA Engineer</span></p>
