--- a/en/apps.html
+++ b/en/apps.html
@@ -115,9 +115,9 @@
           </svg>
           <span class="close_menu">&#10006;</span>
         </li>
-        <li class="nav_list-item"><a class="nav_list-link" href="../index.html">SFERA Project</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="../index.html">Home</a></li>
         <li class="nav_list-item active"><a class="nav_list-link" href="#">Applications</a></li>
-        <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download SFERA</a></li>
+        <li class="nav_list-item"><a class="nav_list-link" href="./../en/downloads.html">Download</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/news.html">News</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/startups.html">Startups</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="./../en/investment.html">Investment</a></li>
