--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 						</svg>
 						<span class="close_menu">&#10006;</span>
 					</li>
-					<li class="nav_list-item active"><a class="nav_list-link " href="#">SFERA Project</a></li>
+					<li class="nav_list-item active"><a class="nav_list-link " href="#">Home</a></li>
 					<li class="nav_list-item"><a class="nav_list-link " href="./en/apps.html">Applications</a></li>
-					<li class="nav_list-item"><a class="nav_list-link" href="./en/downloads.html">Download SFERA</a></li>
+					<li class="nav_list-item"><a class="nav_list-link" href="./en/downloads.html">Download</a></li>
 					<li class="nav_list-item"><a class="nav_list-link" href="./en/news.html">News</a></li>
 					<li class="nav_list-item"><a class="nav_list-link" href="./en/startups.html">Startups</a></li>
 					<li class="nav_list-item"><a class="nav_list-link" href="./en/investment.html">Investment</a></li>
